$null
[eval]:6
  ALTER TABLE inscricoes 
  ^^^^^
Expected ',', got 'TABLE'

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.13.1
